# cellconsensus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_PYPI.md  pyproject.toml
.cirro/: preprocess.py  process-form.json  process-input.json
.github/workflows/: bump_version.yml  ci.yml  docker.yml
cellconsensus/: __init__.py  core.py
cellconsensus/assignment/: __init__.py  hierarchical.py
cellconsensus/cancer/: __init__.py  cache.py  scoring.py
cellconsensus/clustering/: __init__.py  ccc.py
cellconsensus/consensus/: cl_mapping.py  gene_alias.py  markers.py
cellconsensus/data/: cl_to_meta.json  consensus_cache_cancer.pkl  consensus_cache_meta2.pkl  consensus_cache_meta3.pkl  gene_alias.json
examples/: pbmc10k_example.py
nextflow/: .nf-core.yml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json  ro-crate-metadata.json
nextflow/.devcontainer/: setup.sh
nextflow/.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
nextflow/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
nextflow/.github/workflows/: awsfulltest.yml  awstest.yml  branch.yml  fix_linting.yml
nextflow/assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  samplesheet.csv  schema_input.json  sendmail_template.txt  slackreport.json
nextflow/conf/: base.config  modules.config  test.config  test_full.config
nextflow/docs/: README.md  output.md  usage.md
nextflow/modules/local/cellconsensus_annotate/: main.nf
nextflow/modules/local/cellconsensus_visualize/: main.nf
nextflow/subworkflows/local/utils_nfcore_cellconsensus_pipeline/: main.nf
nextflow/tests/: default.nf.test  nextflow.config
nextflow/workflows/: cellconsensus.nf
scripts/: run_pbmc3k_pipeline.sh
src/cellconsensus/: __init__.py  core.py
src/cellconsensus/assignment/: __init__.py  hierarchical.py
src/cellconsensus/cancer/: __init__.py  cache.py  scoring.py
src/cellconsensus/cli/: __init__.py  annotate.py  list_cancer_types.py  list_cell_types.py  visualize.py
src/cellconsensus/clustering/: __init__.py  ccc.py
src/cellconsensus/consensus/: __init__.py  cl_mapping.py  gene_alias.py  markers.py
src/cellconsensus/data/: cl_to_meta.json  consensus_cache_cancer.pkl  consensus_cache_meta.pkl  consensus_cache_meta2.pkl  malignant_cancer_codes.json
src/cellconsensus/plotting/: __init__.py  visualize.py
tests/: test_smoke.py  test_visualize.py
tests/integration/: .gitignore
