[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cellconsensus"
version = "1.2.0"
description = "Hierarchical unsupervised cell type annotation from consensus markers"
readme = "README_PYPI.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Antoine de Mathelin", email = "antoine.demat@gmail.com"},
    {name = "tansey-lab"},
]
keywords = [
    "single-cell",
    "scRNA-seq",
    "cell-type-annotation",
    "consensus-markers",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.8",
    "pynndescent>=0.5.8",
    "numba>=0.57",
    "anndata>=0.8",
]

[project.urls]
Homepage = "https://github.com/tansey-lab/cellconsensus"
Repository = "https://github.com/tansey-lab/cellconsensus"
Issues = "https://github.com/tansey-lab/cellconsensus/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellconsensus*"]

[tool.setuptools.package-data]
cellconsensus = ["data/*.pkl", "data/*.json", "*.json"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "ipython",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter, but not always fixable)
    "N803",  # Argument name should be lowercase (common in ML: X for matrices)
    "N806",  # Variable name should be lowercase (common in ML: B, K, M for batch/dim)
    "N812",  # Lowercase imported as non-lowercase (common: torch.nn.functional as F)
    "N817",  # CamelCase imported as acronym
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
